--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -34,11 +35,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.26.4\n",
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: C:/Users/pieri/anaconda3/Library/include\n",
+      "    lib directory: C:/Users/pieri/anaconda3/Library/lib\n",
+      "    name: mkl-sdl\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\Library\\lib\\pkgconfig\n",
+      "    version: '2023.1'\n",
+      "  lapack:\n",
+      "    detection method: internal\n",
+      "    found: true\n",
+      "    include directory: unknown\n",
+      "    lib directory: unknown\n",
+      "    name: dep1868282989520\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: unknown\n",
+      "    version: 1.26.4\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  c++:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.8\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "  host:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "Python Information:\n",
+      "  path: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\python.exe\n",
+      "  version: '3.11'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - SSE\n",
+      "  - SSE2\n",
+      "  - SSE3\n",
+      "  found:\n",
+      "  - SSSE3\n",
+      "  - SSE41\n",
+      "  - POPCNT\n",
+      "  - SSE42\n",
+      "  - AVX\n",
+      "  - F16C\n",
+      "  - FMA3\n",
+      "  - AVX2\n",
+      "  - AVX512F\n",
+      "  - AVX512CD\n",
+      "  - AVX512_SKX\n",
+      "  - AVX512_CLX\n",
+      "  - AVX512_CNL\n",
+      "  - AVX512_ICL\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(np.__version__)\n",
+    "np.show_config()\n"
    ]
   },
   {
@@ -51,11 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "# Using random.randint\n",
+    "a=np.random.randint(100,size=(2,3,5))\n",
+    "\n",
+    "# Using random.random\n",
+    "a1=np.random.random(size=(2,3,5))\n",
+    "\n",
+    "# Using random.uniform\n",
+    "a2=np.random.uniform(100,size=(2,3,5))"
    ]
   },
   {
@@ -68,11 +158,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[23 41 20 98 76]\n",
+      "  [97 11  9 47 91]\n",
+      "  [23  5 29 53 91]]\n",
+      "\n",
+      " [[25 70 73 70 97]\n",
+      "  [77 65 63 55 32]\n",
+      "  [76  2  8 63 19]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)\n"
    ]
   },
   {
@@ -85,11 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b=np.ones((5,2,3))\n"
    ]
   },
   {
@@ -102,11 +208,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +247,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a and b have the same size: 30\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "if a.size==b.size:\n",
+    "    print('a and b have the same size:',a.size)\n",
+    "else:\n",
+    "    print('a size is ',a.size,' and size b is ',b.size)"
    ]
   },
   {
@@ -136,11 +276,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28msum\u001b[39m\u001b[38;5;241m=\u001b[39ma\u001b[38;5;241m+\u001b[39mb\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "sum=a+b\n",
+    "#You can not because they have different shapes"
    ]
   },
   {
@@ -154,11 +308,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c=np.transpose(b,(1,2,0))"
    ]
   },
   {
@@ -171,11 +326,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d=a+c\n",
+    "#When used the function transpose(), its possible to rearrange the shape. So was possible to sum them bc now c and d have the same shape."
    ]
   },
   {
@@ -188,12 +345,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array a:\n",
+      " [[[23 41 20 98 76]\n",
+      "  [97 11  9 47 91]\n",
+      "  [23  5 29 53 91]]\n",
+      "\n",
+      " [[25 70 73 70 97]\n",
+      "  [77 65 63 55 32]\n",
+      "  [76  2  8 63 19]]]\n",
+      "\n",
+      "Array d:\n",
+      " [[[24. 42. 21. 99. 77.]\n",
+      "  [98. 12. 10. 48. 92.]\n",
+      "  [24.  6. 30. 54. 92.]]\n",
+      "\n",
+      " [[26. 71. 74. 71. 98.]\n",
+      "  [78. 66. 64. 56. 33.]\n",
+      "  [77.  3.  9. 64. 20.]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print('Array a:\\n',a)\n",
+    "print('\\nArray d:\\n',d)\n",
+    "#Because b was an array only with one, d is an array that is equal to a+1"
    ]
   },
   {
@@ -206,11 +389,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e=a*c"
    ]
   },
   {
@@ -224,12 +408,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array a:\n",
+      " [[[23 41 20 98 76]\n",
+      "  [97 11  9 47 91]\n",
+      "  [23  5 29 53 91]]\n",
+      "\n",
+      " [[25 70 73 70 97]\n",
+      "  [77 65 63 55 32]\n",
+      "  [76  2  8 63 19]]]\n",
+      "\n",
+      "Array e:\n",
+      " [[[23. 41. 20. 98. 76.]\n",
+      "  [97. 11.  9. 47. 91.]\n",
+      "  [23.  5. 29. 53. 91.]]\n",
+      "\n",
+      " [[25. 70. 73. 70. 97.]\n",
+      "  [77. 65. 63. 55. 32.]\n",
+      "  [76.  2.  8. 63. 19.]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print('Array a:\\n',a)\n",
+    "print('\\nArray e:\\n',e)\n",
+    "# Because array c has only values=1, when you multiplicate a and c, is the same as a*1 \n",
+    "# so a and e are the same\n"
    ]
   },
   {
@@ -243,12 +454,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "d_max=np.max(d)\n",
+    "d_min=np.min(d)\n",
+    "d_mean=np.mean(d)\n"
    ]
   },
   {
@@ -261,11 +474,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f=np.empty((2,3,5))"
    ]
   },
   {
@@ -287,11 +501,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "cond_25=(d>d_min) & (d<d_mean)\n",
+    "cond_75=(d>d_mean) & (d<d_max)\n",
+    "cond_50=d==d_mean\n",
+    "cond_0=d==d_min\n",
+    "cond_100=d==d_max\n",
+    "\n",
+    "f[cond_25]=25\n",
+    "f[cond_75]=75\n",
+    "f[cond_50]=50\n",
+    "f[cond_0]=0\n",
+    "f[cond_100]=100"
    ]
   },
   {
@@ -325,11 +550,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array d:\n",
+      " [[[24. 42. 21. 99. 77.]\n",
+      "  [98. 12. 10. 48. 92.]\n",
+      "  [24.  6. 30. 54. 92.]]\n",
+      "\n",
+      " [[26. 71. 74. 71. 98.]\n",
+      "  [78. 66. 64. 56. 33.]\n",
+      "  [77.  3.  9. 64. 20.]]]\n",
+      "\n",
+      "Array f:\n",
+      " [[[ 25.  25.  25. 100.  75.]\n",
+      "  [ 75.  25.  25.  25.  75.]\n",
+      "  [ 25.  25.  25.  75.  75.]]\n",
+      "\n",
+      " [[ 25.  75.  75.  75.  75.]\n",
+      "  [ 75.  75.  75.  75.  25.]\n",
+      "  [ 75.   0.  25.  75.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print('Array d:\\n',d)\n",
+    "print('\\nArray f:\\n',f)"
    ]
   },
   {
@@ -350,17 +601,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['B' 'B' 'B' 'E' 'D']\n",
+      "  ['D' 'B' 'B' 'B' 'D']\n",
+      "  ['B' 'B' 'B' 'D' 'D']]\n",
+      "\n",
+      " [['B' 'D' 'D' 'D' 'D']\n",
+      "  ['D' 'D' 'D' 'D' 'B']\n",
+      "  ['D' 'A' 'B' 'D' 'B']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "st=np.empty((2,3,5),dtype=object)\n",
+    "st[cond_25]='B'\n",
+    "st[cond_75]='D'\n",
+    "st[cond_50]='C'\n",
+    "st[cond_0]='A'\n",
+    "st[cond_100]='E'\n",
+    "print(st)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
